--- a/chart/templates/secret.yaml
+++ b/chart/templates/secret.yaml
@@ -3,12 +3,34 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.auth.secretName }}
-  annotations:
-     {{- include "atomi-internal-ingress.annotations" . | nindent 4 }}
+  annotations: {{- include "sulfoxide-boron.annotations" . | nindent 4 }}
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-weight": "-2"
-  labels:
-    {{- include "atomi-internal-ingress.labels" . | nindent 4 }}
+  labels: {{- include "sulfoxide-boron.labels" . | nindent 4 }}
 data:
   TUNNEL_TOKEN: {{ b64enc .Values.auth.internal.token }}
+---
+{{- end }}
+{{- if .Values.auth.external.enable }}
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: {{ .Release.Name -}}-external-secret
+  annotations: {{- include "sulfoxide-boron.annotations" . | nindent 4 }}
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-2"
+  labels: {{- include "sulfoxide-boron.labels" . | nindent 4 }}
+spec:
+  refreshInterval: {{ .Values.auth.external.refreshInterval }}
+  secretStoreRef:
+    name: {{ .Values.auth.external.secretStore.name }}
+    kind: {{ .Values.auth.external.secretStore.kind }}
+  target:
+    name: {{ .Values.auth.secretName }}
+    creationPolicy: {{ .Values.auth.external.policy.creation }}
+    deletionPolicy: {{ .Values.auth.external.policy.deletion }}
+  data:
+    - secretKey: TUNNEL_TOKEN
+      remoteRef:
+        key: "{{ .Values.auth.external.remoteSecretName }}"
 {{- end }}
