--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,6 +1,11 @@
 apiVersion: v2
-name: atomi-internal-ingress
-description: Internal Ingress for AtomiCloud using Cloudflared
+name: sulfoxide-boron
+description: Helm chart to deploy internal ingress controller with VPN access to internal services using cloudflared
 type: application
 version: 1.0.1
-appVersion: "2023.7.3"
+appVersion: "2023.8.2"
+
+dependencies:
+  - name: sulfoxide-bromine
+    version: 1.1.0
+    repository: oci://ghcr.io/atomicloud/sulfoxide.bromine
