fix: sync wave for secretstore externalsecret

--- a/chart/templates/secret.yaml
+++ b/chart/templates/secret.yaml
@@ -4,8 +4,7 @@ kind: Secret
 metadata:
   name: {{ .Values.auth.secretName }}
   annotations: {{- include "sulfoxide-boron.annotations" . | nindent 4 }}
-    "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-weight": "-2"
+    {{- toYaml .Values.secretAnnotation | nindent 4 }}
   labels: {{- include "sulfoxide-boron.labels" . | nindent 4 }}
 data:
   TUNNEL_TOKEN: {{ b64enc .Values.auth.internal.token }}
@@ -17,8 +16,7 @@ kind: ExternalSecret
 metadata:
   name: {{ .Release.Name -}}-external-secret
   annotations: {{- include "sulfoxide-boron.annotations" . | nindent 4 }}
-    "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-weight": "-2"
+    {{- toYaml .Values.secretAnnotation | nindent 4 }}
   labels: {{- include "sulfoxide-boron.labels" . | nindent 4 }}
 spec:
   refreshInterval: {{ .Values.auth.external.refreshInterval }}
