--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -8,10 +8,7 @@ serviceTree:
 # -- Create SecretStore via secret of secrets pattern
 sulfoxide-bromine:
   annotations:
-    # -- Helm hook to run
-    helm.sh/hook: pre-install,pre-upgrade
-    # -- Helm weight to run
-    helm.sh/weight: "-5"
+    argocd.argoproj.io/sync-wave: "-3"
   # -- Store name to create
   storeName: doppler-boron
   # -- Secret of Secrets reference
@@ -19,6 +16,10 @@ sulfoxide-bromine:
     # -- DOPPLER Token Reference
     ref: "SULFOXIDE_BORON"
 
+
+# -- Secret Annotations (External Secrets) to control synchronization
+secretAnnotation:
+  argocd.argoproj.io/sync-wave: "-2"
 
 # -- Cloudflare Tunnel Token
 auth:
