--- a/chart/values.entei.onyx.yaml
+++ b/chart/values.entei.onyx.yaml
@@ -9,7 +9,7 @@ auth:
   external:
     enable: true
     refreshInterval: 1h
-    remoteSecretName: ONYX_RUBY_INGRESS_TOKEN
+    remoteSecretName: ONYX_JADE_INGRESS_TOKEN
 
 replicaCount: 1
 
