--- a/chart/values.example.yaml
+++ b/chart/values.example.yaml
@@ -9,7 +9,7 @@ auth:
   external:
     enable: true
     refreshInterval: 1h
-    remoteSecretName: OPAL_RUBY_INGRESS_TOKEN
+    remoteSecretName: INGRESS_TOKEN
 
 replicaCount: 1
 
