--- a/chart/values.suicune.mica-talc.yaml
+++ b/chart/values.suicune.mica-talc.yaml
@@ -27,7 +27,7 @@ auth:
   external:
     enable: true
     refreshInterval: 1h
-    remoteSecretName: MICA_TALC_INGRESS_TOKEN
+    remoteSecretName: INGRESS_TOKEN
 
 autoscaling:
   enabled: true
