--- a/chart/values.suicune.opal-ruby.yaml
+++ b/chart/values.suicune.opal-ruby.yaml
@@ -27,7 +27,7 @@ auth:
   external:
     enable: true
     refreshInterval: 1h
-    remoteSecretName: OPAL_RUBY_INGRESS_TOKEN
+    remoteSecretName: INGRESS_TOKEN
 
 autoscaling:
   enabled: true
