upstream(atominix): ugrading to 28.0.0

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 
 env:
   RELEASE_NAME: sulfoxide-boron
@@ -14,6 +14,11 @@ includes:
     vars:
       LANDSCAPE: suicune
       CLUSTER: opal-ruby
+  suicune:mica-talc:
+    taskfile: tasks/Taskfile.cluster.yaml
+    vars:
+      LANDSCAPE: suicune
+      CLUSTER: mica-talc
 
 tasks:
   # Utility
