--- a/chart/templates/secret.yaml
+++ b/chart/templates/secret.yaml
@@ -11,7 +11,7 @@ data:
 ---
 {{- end }}
 {{- if .Values.auth.external.enable }}
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: {{ .Release.Name -}}-external-secret
